# srchigh

./: .gitignore  DISCLAIMER.md  LICENSE  Makefile  README.md  agent.md  config.py  download.py  gui.py  install.sh  main.py  parser.py  pyproject.toml  requirements.txt  session.py  setup.py
src/srchigh/: config.py  db.py  download.py  export.py  gui.py  log_setup.py  main.py  parser.py  sci.py  session.py
tests/: conftest.py  test_config.py  test_download.py  test_export.py  test_gui.py  test_log_setup.py  test_parser.py  test_sci.py  test_session.py  test_smoke.py
