[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srchigh"
version = "2.1.0"
description = "eCourts India — High Court Judgments Scraper"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "Pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "parsel>=1.10.0",
]

[project.scripts]
srchigh = "srchigh.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
markers = [
    "network: marks tests that require network access to the eCourts server (deselect with '-m \"not network\"')",
]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
include = ["srchigh*"]
